--- a/api/.env.example
+++ b/api/.env.example
@@ -37,7 +37,10 @@ DB_LOGGING=false
 # CORS (opcional)
 CORS_ORIGIN=http://localhost:3000,http://localhost:3001
 
-# JWT (quando implementar autenticação)
-# JWT_SECRET=sua-chave-secreta-aqui
-# JWT_EXPIRES_IN=1d
-*/
+# AUTENTICAÇÃO
+JWT_SECRET=sua_chave_secreta_super_segura_aqui_mude_em_producao
+JWT_EXPIRES_IN=24h
+
+# SWAGGER - Documentação Privada
+SWAGGER_USERNAME=admin
+SWAGGER_PASSWORD=senha_super_segura_aqui
