--- a/api/.env.example
+++ b/api/.env.example
@@ -36,11 +36,10 @@ DB_LOGGING=false
 
 # CORS (opcional)
 CORS_ORIGIN=http://localhost:3000,http://localhost:3001
+API_BEARER_TOKEN=seu_token_super_secreto_aqui_123456789
+
 
 # AUTENTICAÇÃO
-JWT_SECRET=sua_chave_secreta_super_segura_aqui_mude_em_producao
+JWT_SECRET=
 JWT_EXPIRES_IN=24h
 
-# SWAGGER - Documentação Privada
-SWAGGER_USERNAME=admin
-SWAGGER_PASSWORD=senha_super_segura_aqui
