--- a/api/.env.example
+++ b/api/.env.example
@@ -28,18 +28,17 @@ NODE_ENV=development
 DB_HOST=localhost
 DB_PORT=1433
 DB_USERNAME=sa
-DB_PASSWORD=
-DB_DATABASE=
+DB_PASSWORD=N3stJS@2025!
+DB_DATABASE=LH
 DB_ENCRYPT=false
 DB_TRUST_CERT=true
 DB_LOGGING=false
 
 # CORS (opcional)
 CORS_ORIGIN=http://localhost:3000,http://localhost:3001
-API_BEARER_TOKEN=seu_token_super_secreto_aqui_123456789
+API_BEARER_TOKEN=fekphfewipjhewfpihbo+efwjfivgpewfhi
 
 
 # AUTENTICAÇÃO
 JWT_SECRET=
 JWT_EXPIRES_IN=24h
-
